--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 
     <meta
       name="description"
-      content="Pedro Cardoso, Computer Technician, Department of Applied Mathematics and Theoretical Physics, University of Cambridge."
+      content="Pedro Cardoso, System Administrator, Portuguese Air Force, Department of Applied Mathematics and Theoretical Physics, University of Cambridge."
     />
     <meta
       name="keywords"
-      content="Pedro Cardoso, OsodracPT, DAMTP, Cambridge University, Mathematics, Home Page"
+      content="Pedro Cardoso, OsodracPT, DAMTP, Cambridge University, Mathematics, Home Page, Portuguese Air Force"
     />
 
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Pedro Cardoso, University of Cambridge</title>
+    <title>Pedro Cardoso, Portuguese Air Force</title>
 
     <!-- Bootstrap -->
     <link
@@ -84,7 +84,7 @@
                   Pedro <br />
                   Cardoso
                 </h1>
-                <p class="promo-block-text">BEng Computer Science Student</p>
+                <p class="promo-block-text">System Administrator</p>
               </div>
               <ul class="list-inline">
                 <li>
@@ -97,6 +97,11 @@
                 <li>
                   <a href="https://github.com/OsodracPT" class="social-icons"
                     ><i class="fa fa-github"></i
+                  ></a>
+                </li>
+                <li>
+                  <a href="pdf/CV.pdf" class="social-icons"
+                    ><i class="fa fa-file-pdf-o"></i
                   ></a>
                 </li>
                 <li>
@@ -113,9 +118,7 @@
         </div>
       </div>
     </section>
-
     <!--========== About me ==========-->
-
     <section class="about_us_area" id="ABOUT">
       <div class="container">
         <div class="row">
@@ -139,7 +142,7 @@
                   aria-valuenow="60"
                   aria-valuemin="0"
                   aria-valuemax="100"
-                  style="width: 90%;"
+                  style="width: 90%"
                 >
                   <span class="sr-only">60% Complete</span>
                 </div>
@@ -154,14 +157,14 @@
                   aria-valuenow="60"
                   aria-valuemin="0"
                   aria-valuemax="100"
-                  style="width: 60%;"
+                  style="width: 60%"
                 >
                   <span class="sr-only">60% Complete</span>
                 </div>
               </div>
             </div>
             <div class="single_progress_bar">
-              <h2>DATABASE ADMINISTRATION - 75%</h2>
+              <h2>DATABASE ADMINISTRATION - 80%</h2>
               <div class="progress">
                 <div
                   class="progress-bar"
@@ -169,7 +172,7 @@
                   aria-valuenow="60"
                   aria-valuemin="0"
                   aria-valuemax="100"
-                  style="width: 75%;"
+                  style="width: 75%"
                 >
                   <span class="sr-only">60% Complete</span>
                 </div>
@@ -184,7 +187,7 @@
                   aria-valuenow="60"
                   aria-valuemin="0"
                   aria-valuemax="100"
-                  style="width: 95%;"
+                  style="width: 95%"
                 >
                   <span class="sr-only">60% Complete</span>
                 </div>
@@ -193,22 +196,20 @@
           </div>
           <div class="col-md-4 wow fadeInRight animated">
             <p class="about_us_p">
-              Currently doing some free lancing web development work for the UK
-              Fluids Network. Last year I did an internship at the Maths
-              Faculty, University of Cambridge as a Computer Technician.
-              Staffing the help-desk of this faculty helped me develop a wide
-              range of skills daily such as website editing, desktop systems
-              management, database management, interactive web-based software,
-              programming, software application design and testing, hardware
-              support and fault diagnosis.
+              System administrator with over four years of experience managing
+              various databases, including Oracle, MySQL, PostgreSQL, and MS
+              SQL. I've gained expertise in administering Linux and Windows
+              server machines. Successfully managed and maintained critical IT
+              infrastructure for a range of organizations. Alongside my
+              technical skills, I'm also knowledgeable in Ansible and Veeam
+              backup solutions and have experience in Zabbix monitoring.
             </p>
           </div>
           <div class="col-md-4 wow fadeInRight animated">
             <p class="about_us_p">
-              While not at work I constantly try to learn new skills. Right now
-              I am improving my web-development programming techniques by
-              learning new frameworks such as Angular and ASP.NET. You can find
-              everything that I am working on in my GitHub repositories.
+              My experience has also piqued my interest in the dynamic field of
+              Cybersecurity, and I'm passionate about deepening my knowledge and
+              skills in this area.
             </p>
           </div>
         </div>
@@ -217,13 +218,48 @@
 
     <section id="timeline">
       <ul class="timeline">
-        <!-- Item 1 -->
+        <!-- Item 1 Left-->
+        <li>
+          <div class="direction-l">
+            <div class="flag-wrapper">
+              <span class="flag">Sysadmin</span>
+              <span class="time-wrapper"
+                ><span class="time">Dec 2020 - Present</span></span
+              >
+            </div>
+            <div class="desc wow fadeInRight animated">
+              <strong>System Administrator at Portuguese Air Force.</strong>
+              Managed various databases including Oracle, MySQL, PostgreSQL, and
+              MS SQL. Administered Linux and Windows server machines, from
+              Ubuntu to RHEL. Installed, configured and maintained network
+              services such as DNS, DHCP, SSH, FTP, and HTTP. Managed
+              virtualization infrastructure using VMware and Hyper-V.
+            </div>
+          </div>
+        </li>
+        <!-- Item 2 Right -->
+        <li>
+          <div class="direction-r">
+            <div class="flag-wrapper">
+              <span class="flag">Network Eng.</span>
+              <span class="time-wrapper"
+                ><span class="time">Mar 2020 - Jul 2020</span></span
+              >
+            </div>
+            <div class="desc wow fadeInRight animated">
+              <strong>Network Security Support Engineer, Arrow ECS.</strong>
+              Triaging support requests based on impact and severity alongside a
+              team of engineers.
+            </div>
+          </div>
+        </li>
+        <!-- Item 3 Left-->
         <li>
           <div class="direction-l">
             <div class="flag-wrapper">
               <span class="flag">Web Developer</span>
               <span class="time-wrapper"
-                ><span class="time">Dec 2019 - Present</span></span
+                ><span class="time">Dec 2019 - Apr 2021</span></span
               >
             </div>
             <div class="desc wow fadeInRight animated">
@@ -233,8 +269,7 @@
             </div>
           </div>
         </li>
-
-        <!-- Item 1 -->
+        <!-- Item 4 Right-->
         <li>
           <div class="direction-r">
             <div class="flag-wrapper">
@@ -250,29 +285,24 @@
             </div>
           </div>
         </li>
-
-        <!-- Item 2 -->
+        <!-- Item 5 Left-->
         <li>
           <div class="direction-l">
             <div class="flag-wrapper">
               <span class="flag">Bachelor Degree</span>
               <span class="time-wrapper"
-                ><span class="time">Sep 2016 - Present</span></span
+                ><span class="time">Sep 2016 - May 2020</span></span
               >
             </div>
             <div class="desc wow fadeInLeft animated">
-              <strong
-                >Bachelor of Engineering in Computer Science at Anglia Ruskin
-                University.</strong
-              >
+              <strong>BEng (Hons) Computer Science (1st).</strong>
               Programming, Operating Systems, Database Design and
               Implementation, Digital Security, Interaction and Usability,
               Network Routing, Software Engineering .
             </div>
           </div>
         </li>
-
-        <!-- Item 4 -->
+        <!-- Item 6 Right-->
         <li>
           <div class="direction-r">
             <div class="flag-wrapper">
@@ -317,15 +347,8 @@
                   ><i class="fa fa-youtube-play"></i
                 ></a>
               </li>
-              <li>
-                <a
-                  href="https://www.associacaoestrelinha.eu/nextcloud/"
-                  class="socialF"
-                  ><i class="fa fa-cloud"></i
-                ></a>
-              </li>
             </ul>
-            <p id="copywrite">© 2020 Pedro Cardoso | All Rights Reserved.</p>
+            <p id="copywrite">© 2023 Pedro Cardoso | All Rights Reserved.</p>
           </div>
         </div>
       </div>
